# ttipabot-web

./: .flaskenv  .gitignore  README.md  app.db  config.py  id_patches.json  pyproject.toml  ttipabot-web.py
app/: __init__.py  cli.py  csv_handler.py  csv_migrate.py  data_migrator.py  models.py  queries.py  routes.py  scraper.py  temporal_db.py
app/api/: routes.py
app/main/: routes.py
app/static/: chanter.js  quotes.txt  style.css  table.js
app/templates/: base.html  firms.html  lapses.html  movements.html  names.html  page.html  ritual.html  table.html
app/templates/errors/: 500.html
migrations/versions/: 0d7443aca225_attorney_and_firm_tables.py  41ff28f19830_external_id_and_indexing.py  8b6547fdde8a_table_renames_and_firm_website_field.py  a0f9a4d8b344_new_schema_with_firms_not_temporal.py  b440385ff79e_foreign_key_fields.py
tests/: conftest.py  csv_migration_test.py  parsing_test.py  test_database_integration.py
tests/examples/: attorney_example.json  firm_example.json  mixed_example.json
