[project]
name = "ttipabot-web"
version = "1.0.0"
description = "Web frontend for TTIPABot"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy",
    "flask-migrate",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "lxml>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
]
